# Inventory-Management-API

./: .env  Procfile  README.md  db.sqlite3  manage.py  mksakca  pyproject.toml  requirements.txt
auditlog/: admin.py  apps.py  filters.py  models.py  permissions.py  signals.py
auditlog/api/: serializers.py  urls.py  views.py
auditlog/migrations/: 0001_initial.py  0002_alter_warehousestockhistory_action.py
home/: urls.py  views.py
ims_config/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  apps.py  functions.py  models.py  signals.py
inventory/api/: serializers.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_product_supplier.py  0003_alter_category_options_alter_product_options_and_more.py  0004_alter_product_category_and_more.py  0005_alter_productimage_image.py
orders/: admin.py  models.py  permissions.py
orders/api/: serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_purchaseorder_is_active_salesorder_is_active_and_more.py
users/: admin.py  filters.py  functions.py  models.py  permissions.py  tests.py
users/api/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_is_staff.py  0003_acesscode_alter_customuser_role_supplier.py  0004_remove_supplier_address_address.py  0005_userrank_rename_uuid_acesscode_id_supplier_amount_and_more.py  0006_alter_customuser_options.py  0007_remove_supplier_amount.py  0008_remove_customer_amount.py
warehouse/: admin.py  models.py
warehouse/api/: serializers.py  urls.py  views.py
warehouse/migrations/: 0001_initial.py  0002_alter_warehouse_options_warehouse_created_at_and_more.py  0003_alter_warehouse_image.py
