[tool.poetry]
name = "ims"
version = "0.1.0"
description = ""
authors = ["Jaefer-Kemal <jaeferkemal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
django-filter = "^24.3"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
pyparsing = "^3.2.0"
pydot = "^3.0.2"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
python-decouple = "^3.8"
django-heroku = "^0.3.1"
rest-framework-simplejwt = "^0.0.2"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.8"
django-cloudinary-storage = "^0.3.0"
cloudinary = "^1.41.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
